tests/diagnostics/file_roles/main_entrypoint/has_parameters/expect.txt
# exit: 1
main.bin.coppice:1:10: error: main in .bin.coppice must not declare parameters
  function main(value: int64) -> nil {
           ^
